<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buscar">

    <TextView
        android:id="@+id/titleSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/robotobold"
        android:text="Search"
        android:textColor="@color/naranja"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/robotobold"
        android:text="Friend"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/titleSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/svSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_view_background"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleSearch" />

    <TextView
        android:id="@+id/tvUps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ups"
        android:layout_marginStart="30dp"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/svSearch"
        />

    <ImageView
        android:id="@+id/ivDog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="40dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/dog_api"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/sBoton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUps"
        app:layout_constraintVertical_bias="0.525" />

    <com.ncorti.slidetoact.SlideToActView
        android:id="@+id/sBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:elevation="3dp"
        app:area_margin="0dp"
        app:text="@string/back"
        app:inner_color="@color/naranja"
        app:outer_color="@color/white"
        app:text_size="20sp"
        />

    <RelativeLayout
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:background="#75000000"
        android:layout_height="match_parent"
        android:elevation="4dp">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="150dp"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>